--- a/Express/package.json
+++ b/Express/package.json
@@ -2,11 +2,11 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "mocha",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
     "heroku-postbuild": "npm install --prefix my-react-app && npm run build --prefix my-react-app"
   },
   "keywords": [],
@@ -21,8 +21,7 @@
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "chai": "^5.1.2",
-    "mocha": "^11.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   },
   "engines": {
